--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Goudy+Bookletter+1911&family=Lobster&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -9,10 +11,31 @@ body {
   cursor: default;
 }
 
+button {
+  cursor: pointer;
+  border: 1px solid black;
+  background-color: black;
+  color: antiquewhite;
+  padding: 7px 10px;
+  border-radius: 5px;
+}
+
+button:hover {
+  background-color: black;
+  color: antiquewhite;
+}
+
+button:active {
+  background-color: black;
+  color: antiquewhite;
+  transform: scale(0.95);
+}
+
 header {
   width: 100%;
   font-size: 22px;
-  background-color: antiquewhite;
+  background-color: black;
+  filter: drop-shadow(0 0 10px black) opacity(0.9);
 }
 
 .header-container {
@@ -23,6 +46,7 @@ header {
   padding: 10px 0;
   max-width: 1200px;
   gap: 100px;
+  color: antiquewhite;
 }
 
 .header-container > * {
@@ -43,18 +67,170 @@ header {
   margin-bottom: 30px;
 }
 
+.shows h2 {
+  text-align: center;
+  font-size: 36px;
+  margin-bottom: 30px;
+}
+
+.series {
+  text-align: center;
+  width: auto;
+  max-width: 1200px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 50px auto;
+  column-gap: 100px;
+  row-gap: 70px;
+}
+
+.item {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+}
+
+.item img {
+  border-radius: 10px;
+  box-shadow: 0 0 15px black;
+}
+
+.item-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  align-self: stretch;
+}
+
+.heart {
+  transition: transform 0.2s ease-out;
+  color: black;
+  filter: drop-shadow(0 0 5px black);
+  font-size: 200%;
+  cursor: pointer;
+}
+
+.heart:hover {
+  animation: alternate 0.5s ease-in-out infinite;
+  color: antiquewhite;
+}
+
+.heart:active {
+  transform: scale(1.3);
+  color: antiquewhite;
+}
+
+.likes {
+  color: black;
+  align-self: flex-end;
+}
+
+.comments {
+  display: flex;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: antiquewhite;
+  border: 1px solid #000;
+  padding: 40px;
+  gap: 60px;
+  border-radius: 20px;
+  z-index: 100;
+  max-height: 80vh;
+}
+
+.comments img {
+  max-width: 450px;
+  border-radius: 20px;
+}
+
+.closeBtn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 30px;
+  color: black;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+}
+
+.text-content {
+  overflow-y: scroll;
+  padding: 0 10px;
+}
+
+.info h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+  grid-column: 1 / 3;
+}
+
+.info {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+  margin-bottom: 50px;
+}
+
+.comments-section {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 50px;
+  margin: 50px auto;
+}
+
+.comment-list h3 {
+  text-align: center;
+}
+
+.comment-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.comment-form {
+  margin-top: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 100%;
+}
+
+.comment-form button {
+  align-self: flex-end;
+}
+
+.comment-form input,
+.comment-form textarea {
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid #000;
+}
+
 footer {
   font-family: 'Goudy Bookletter 1911', serif;
   width: 100%;
   bottom: 0;
   padding: 20px;
   padding-left: 3%;
-  background-color: antiquewhite;
-  position: fixed;
+  background-color: black;
+  color: antiquewhite;
+  filter: drop-shadow(0 0 10px black) opacity(0.9);
 }
 
 footer > a {
+  font-family: 'Goudy Bookletter 1911', serif;
   text-decoration: none;
+  color: orangered;
+}
+
+footer > a:hover {
+  filter: drop-shadow(0 0 5px antiquewhite);
 }
 
 .screen {
