--- a/src/styles.css
+++ b/src/styles.css
@@ -113,7 +113,11 @@ header {
 
 .heart:active {
   transform: scale(1.3);
-  color: antiquewhite;
+  color: rgb(218, 45, 45);
+}
+
+.heart:visited {
+  color: rgb(218, 45, 45);
 }
 
 .likes {
