--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Goudy+Bookletter+1911&family=Lobster&display=swap');
+@import url('http://fonts.cdnfonts.com/css/agency-fb');
 
 * {
   margin: 0;
@@ -9,33 +10,42 @@
 body {
   background-color: rgb(193, 193, 193);
   cursor: default;
+  background-image: url('../media/neon02.jpg');
+  background-position-y: 0%;
+  background-size: 100% auto;
+  background-attachment: fixed;
+  display: flex;
+  flex-direction: column;
+  color: #ffe9e8;
 }
 
 button {
   cursor: pointer;
-  border: 1px solid black;
-  background-color: black;
+  border: none;
+  background-color: #ce0000;
+  filter: drop-shadow(0 0 5px #ce0000);
   color: antiquewhite;
   padding: 7px 10px;
   border-radius: 5px;
+  font-family: 'Agency FB', sans-serif;
+  font-size: 18px;
 }
 
 button:hover {
-  background-color: black;
-  color: antiquewhite;
+  background-color: #ff0000;
+  filter: drop-shadow(0 0 5px #ff0000);
 }
 
 button:active {
-  background-color: black;
-  color: antiquewhite;
   transform: scale(0.95);
 }
 
 header {
   width: 100%;
-  font-size: 22px;
-  background-color: black;
-  filter: drop-shadow(0 0 10px black) opacity(0.9);
+  font-size: 26px;
+  background-color: #050f14;
+  filter: drop-shadow(0 0 20px #ce0000);
+  font-family: 'Agency FB', sans-serif;
 }
 
 .header-container {
@@ -43,22 +53,33 @@ header {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 10px 0;
+  padding: 0;
   max-width: 1200px;
   gap: 100px;
-  color: antiquewhite;
+}
+
+.header-container div {
+  color: #ffe9e8;
+  filter: drop-shadow(2px 5px 1px #ce0000);
 }
 
 .header-container > * {
   cursor: pointer;
 }
 
-.header-container > *:hover {
+.header-container div:hover {
   transform: scale(1.05);
+}
+
+.logo img {
+  border-radius: 50px;
+  width: 100px;
 }
 
 .shows {
   margin-top: 50px;
+  align-self: flex-end;
+  margin-right: 100px;
 }
 
 .shows h2 {
@@ -69,7 +90,7 @@ header {
 
 .series {
   text-align: center;
-  width: auto;
+  width: 65vw;
   max-width: 1200px;
   display: flex;
   flex-wrap: wrap;
@@ -87,9 +108,17 @@ header {
   width: 210px;
 }
 
+.item h3 {
+  font-family: 'Agency FB', sans-serif;
+  color: #ffe9e8;
+  filter: drop-shadow(2px 3px 1px #ff0000);
+  font-size: 22px;
+}
+
 .item img {
   border-radius: 10px;
   box-shadow: 0 0 15px black;
+  filter: drop-shadow(0 0 5px #ff0000) drop-shadow(0 0 5px #fd3d0d);
 }
 
 .item-header {
@@ -101,28 +130,23 @@ header {
 
 .heart {
   transition: transform 0.2s ease-out;
-  color: black;
-  filter: drop-shadow(0 0 5px black);
+  color: #ffe9e8;
   font-size: 200%;
   cursor: pointer;
 }
 
 .heart:hover {
   animation: alternate 0.5s ease-in-out infinite;
-  color: antiquewhite;
+  filter: drop-shadow(0 0 5px #ff0000) drop-shadow(0 0 5px #ff0000);
 }
 
 .heart:active {
-  transform: scale(1.3);
-  color: rgb(218, 45, 45);
-}
-
-.heart:visited {
-  color: rgb(218, 45, 45);
+  transform: scale(1.2);
+  color: #ff0000;
 }
 
 .likes {
-  color: black;
+  color: #ffe9e8;
   align-self: flex-end;
 }
 
@@ -132,8 +156,8 @@ header {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: antiquewhite;
-  border: 1px solid #000;
+  background-color: #050f14;
+  filter: drop-shadow(0 0 10px #ce0000);
   padding: 40px;
   gap: 60px;
   border-radius: 20px;
@@ -151,10 +175,15 @@ header {
   top: 10px;
   right: 10px;
   font-size: 30px;
-  color: black;
+  color: #ffe9e8;
   background-color: transparent;
   cursor: pointer;
   border: none;
+}
+
+.closeBtn:hover {
+  background-color: transparent;
+  color: #ff0000;
 }
 
 .text-content {
@@ -163,9 +192,11 @@ header {
 }
 
 .info h2 {
-  font-size: 24px;
+  font-size: 32px;
   margin-bottom: 10px;
   grid-column: 1 / 3;
+  color: #ce0000;
+  font-family: 'Agency FB', sans-serif;
 }
 
 .info {
@@ -173,6 +204,8 @@ header {
   grid-template-columns: 1fr 1fr;
   gap: 10px;
   margin-bottom: 50px;
+  font-family: 'Goudy Bookletter 1911', serif;
+  font-size: 18px;
 }
 
 .comments-section {
@@ -180,10 +213,15 @@ header {
   flex-wrap: wrap;
   gap: 50px;
   margin: 50px auto;
+  font-family: 'Agency FB', sans-serif;
+  font-size: 20px;
 }
 
 .comment-list h3 {
   margin-bottom: 15px;
+  font-family: 'Agency FB', sans-serif;
+  color: #ce0000;
+  font-size: 24px;
 }
 
 .comment-list {
@@ -201,6 +239,12 @@ header {
   width: 100%;
 }
 
+.comments-section h3 {
+  color: #ce0000;
+  font-family: 'Agency FB', sans-serif;
+  font-size: 24px;
+}
+
 .comment-form button {
   align-self: flex-end;
 }
@@ -209,7 +253,9 @@ header {
 .comment-form textarea {
   padding: 5px;
   border-radius: 5px;
-  border: 1px solid #000;
+  border: 3px solid #ce0000;
+  font-family: 'Agency FB', sans-serif;
+  background-color: #ffe9e8;
 }
 
 .reservations {
@@ -218,8 +264,8 @@ header {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: antiquewhite;
-  border: 1px solid #000;
+  background-color: #050f14;
+  filter: drop-shadow(0 0 10px #ce0000);
   padding: 40px;
   gap: 60px;
   border-radius: 20px;
@@ -237,10 +283,21 @@ header {
   flex-wrap: wrap;
   gap: 50px;
   margin: 50px auto;
+  font-family: 'Agency FB', sans-serif;
+  font-size: 20px;
+}
+
+.reservations-section h3 {
+  color: #ce0000;
+  font-family: 'Agency FB', sans-serif;
+  font-size: 24px;
 }
 
 .reservation-list h3 {
   margin-bottom: 15px;
+  font-size: 24px;
+  color: #ce0000;
+  font-family: 'Agency FB', sans-serif;
 }
 
 .reservation-list {
@@ -265,7 +322,9 @@ header {
 .reservation-form input {
   padding: 5px;
   border-radius: 5px;
-  border: 1px solid #000;
+  border: 3px solid #ce0000;
+  font-family: 'Agency FB', sans-serif;
+  background-color: #ffe9e8;
 }
 
 footer {
@@ -274,9 +333,8 @@ footer {
   bottom: 0;
   padding: 20px;
   padding-left: 3%;
-  background-color: black;
-  color: antiquewhite;
-  filter: drop-shadow(0 0 10px black) opacity(0.9);
+  background-color: #050f14;
+  filter: drop-shadow(0 0 20px #ce0000);
 }
 
 footer > a {
